# finance_planner

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 16afc41c56cf_initial_schema.py  4f9d76693b6d_description_of_changes.py  a69fac84f6cf_add_multi_tenant_support.py  a84bf816cfb6_description_of_changes.py  c61541b90ee5_add_der_category_and_der_merchant_to_.py
app/: config.py  database.py  dependencies.py  main.py
app/core/: exceptions.py  security.py
app/models/: account.py  base.py  role.py  tenant.py  tenant_context.py  tenant_membership.py  transaction.py  user.py
app/repositories/: account_repository.py  tenant_membership_repository.py  tenant_repository.py  transaction_repository.py  user_repository.py
app/routes/: account_routes.py  tenant_routes.py  transaction_routes.py
app/schemas/: account_schemas.py  tenant_schemas.py  transaction_schemas.py
app/services/: account_service.py  tenant_service.py  transaction_service.py
docs/: ENDPOINTS.md  MIGRATION_GUIDE.md  PLAN.md  RUNNING.md  SCHEMAS.md  TWO_TERMINAL.md  USER_MANUAL.md  WORKFLOWS.md
tests/: conftest.py  test_accounts.py  test_auth_middleware.py  test_integration.py  test_tenant_management.py  test_transactions.py
